--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test-watch": "karma start --singleRun=false --autoWatch=true",
     "commit": "npm run prepublish && npm test && git-cz",
     "prepublish": "ngc && npm run build",
-    "build": "webpack && cp bundles/angular-provide-once.umd.js bundles/index.js",
+    "build": "webpack && cp bundles/main.umd.js bundles/index.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
