--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "commit": "npm run prepublish && npm test && git-cz",
     "prepublish": "ngc && npm run build",
     "build": "webpack && cp bundles/main.umd.js bundles/index.js",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish --tag=next && semantic-release post"
   },
   "repository": {
     "type": "git",
